--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<div>
 		<select name="audioList">
 			<option value="">音声ファイルを選択</option>
-			<option value="./audio/bgm/rainy.mp3">雨催い</option>
-			<option value="./audio/bgm/amane.mp3">アマネ</option>
+			<option value="rainy.mp3">雨催い</option>
+			<option value="amane.mp3">アマネ</option>
 		</select>
 	</div>
 
