--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<div>
 		<select name="audioList">
 			<option value="">音声ファイルを選択</option>
-			<option value="rainy.mp3">雨催い</option>
+			<option value="./audio/bgm/rainy.mp3">雨催い</option>
 			<option value="amane.mp3">アマネ</option>
 		</select>
 	</div>
