--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
 	<title>Web Audio App Demo</title>
 </head>
 <body>
-	<h2>v.0.0.4</h2>
+	<h2>v.0.0.5</h2>
 	<div>
 		<select name="audioList">
 			<option value="">音声ファイルを選択</option>
 			<option value="./audio/bgm/rainy.mp3">雨催い</option>
-			<option value="amane.mp3">アマネ</option>
+			<option value="./audio/bgm/amane.mp3">アマネ</option>
 		</select>
 	</div>
+
+	<audio name="audioTrack"></audio>
 
 	<script type="text/javascript" src="main.js"></script>
 
