--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</select>
 	</div>
 
-	<audio name="audioTrack"></audio>
+	<audio name="audioTrack" preload="metadata"></audio>
 
 	<script type="text/javascript" src="main.js"></script>
 
